@@ -1,3 +1,7 @@
+2016-12-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/allFormats.R: Significantly increased number of tests
+
 2016-12-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/bulkTest.R: Improved testing for POSIXct and Date
